# deploy-test-hv

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  requor.txt
alembic/: env.py
alembic/versions/: 557329850ccc_initial_migration.py
app/configs/: app_configs.py  settings.py  weaviate_connection.py
app/controllers/: main.py
app/controllers/backup/: weaviate_collections.py  weaviate_object.py
app/controllers/chat/: chat.py
app/controllers/indexing/: add_object.py  query_object.py
app/controllers/scraping/: scraping.py
app/controllers/upload/: upload_pdf.py  upload_xlsx.py
app/models/: entity.py  schemas.py
app/routers/: router.py
app/views/: upload_pdf.html  upload_xlsx.html
app/weavite/: create_schema.py  schema.py
backup/: backup1.json  backup2.json  backup3.json  backup4.json
